kube/service-cv.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv
spec:
  type: ClusterIP
  ports:
  - name: cv-svc-port
    port: 81
    targetPort: cv-port
    protocol: TCP
  selector:
    app: cv
