kube/ingress-cv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cv
  namespace: cv
  annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cv.lines14.site
    secretName: letsencrypt-prod
  rules:
  - host: cv.lines14.site
    http:
      paths:
      - path: /?(.*)
        pathType: Exact
        backend:
          service:
            name: cv
            port:
              number: 81
